src/objects/salesforce_milestone_c__x.object
<CustomObject>
    <description>salesforce$milestone__c</description>
    <externalDataSource>PMS</externalDataSource>
    <externalName>salesforce$milestone__c</externalName>
    <fields>
        <fullName>activity_c__c</fullName>
        <description>activity__c</description>
        <externalDeveloperName>activity__c</externalDeveloperName>
        <label>activity__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>createddate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>end_date_c__c</fullName>
        <description>end_date__c</description>
        <externalDeveloperName>end_date__c</externalDeveloperName>
        <label>end_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hc_err__c</fullName>
        <description>_hc_err</description>
        <externalDeveloperName>_hc_err</externalDeveloperName>
        <label>_hc_err</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hc_lastop__c</fullName>
        <description>_hc_lastop</description>
        <externalDeveloperName>_hc_lastop</externalDeveloperName>
        <label>_hc_lastop</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isdeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>isdeleted</description>
        <externalDeveloperName>isdeleted</externalDeveloperName>
        <label>isdeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <description>name</description>
        <externalDeveloperName>name</externalDeveloperName>
        <label>name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_id_c__c</fullName>
        <description>project_id__c</description>
        <externalDeveloperName>project_id__c</externalDeveloperName>
        <label>Project id</label>
        <length>255</length>
        <referenceTargetField>Suggestion__c.Project_Id__c</referenceTargetField>
        <referenceTo>Suggestion__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>sfid__c</fullName>
        <description>sfid</description>
        <externalDeveloperName>sfid</externalDeveloperName>
        <label>sfid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status_c__c</fullName>
        <description>status__c</description>
        <externalDeveloperName>status__c</externalDeveloperName>
        <label>status__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemmodstamp__c</fullName>
        <description>systemmodstamp</description>
        <externalDeveloperName>systemmodstamp</externalDeveloperName>
        <label>systemmodstamp</label>
        <type>DateTime</type>
    </fields>
    <label>Milestone</label>
    <pluralLabel>Milestones</pluralLabel>
</CustomObject>